# TextureChannelServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Client/: main.cpp
Client/Application/: Application.cpp  Application.h
Client/Logger/: Logger.h
Client/Operators/include/: Colorizer.h  Load.h  Operator.h  Perlin.h  Save.h
Client/Operators/src/: Load.cpp  Save.cpp
Client/Renderer/: Renderer.h
Client/Storage/: Storage.h
Client/Texture/: Texture.h
Client/UI/: OperatorManager.h  TextureManager.h
Client/UI/include/: OperatorManager.cpp  OperatorManager.h  TextureManager.cpp  TextureManager.h
Client/UI/src/: TextureManager.cpp
Server/: Server.h  Sever.cpp  main.cpp
Tests/: Tests.cpp
